Refined LogPanel's features